@@ -34,6 +34,11 @@ Suspend without displaying the logout dialog.
 .B \-\-hibernate
 Hibernate without displaying the logout dialog.
 .TP
+.B \-\-fast
+Do a fast shutdown.  This instructs the session manager
+not to save the session, but instead to quit everything
+quickly.
+.TP
 .B \-\-help
 Print a help screen and exit.
 .TP
