@@ -1,3 +1,9 @@
+2008-10-08	Brian Tarricone <bjt23@cornell.edu>
+
+	* xfce4-session-logout/{main.c,xfce4-session-logout.1}: Add
+	  --fast command-line option to instruct the session manager
+	  not to save the session.
+
 2008-10-07	Brian Tarricone <bjt23@cornell.edu>
 
 	* configure.in.in: Add separate deps on dbus and dbus-glib.
